--- a/index.html
+++ b/index.html
@@ -2,12 +2,19 @@
 <link type="text/css" rel="stylesheet" href="/resources/css/index.css">
 
   <head>
-     <title> Work Experience &amp; Goals </title>
+     <title> Jonathan Schmid </title>
      <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
   </head>
 
 <body bgcolor="#000000" text="#000000" link="#0000FF" vlink="#000033" alink="#CCCCCC" left="0" topmargin="0" marginwidth="0" marginheight="0">
 <BR>
+<nav>
+  <ul>
+    <li>Full Stack Web Pages</li>
+    <li>Thesis</li>
+    <li>Robotics</li>
+  </ul>
+</nav>
 
                                    <!-- Light gray block -->
 <table width="95%" border="0" cellspacing="0" cellpadding="5">
