With portrait and robotics collage

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html> 
-
+ 
   <head>
      <link type="text/css" rel="stylesheet" href="./resources/css/index.css">
      <title> Jonathan Schmid </title>
@@ -26,7 +26,7 @@
   <table>
   <tr>
 	  <td>
-      <button><a href="./fullstack.html"><h2>Full Stack Web Pages</h2></a></button>
+      <button><a href="./fullstack.html"><h2>Full Stack Web Page Demos</h2></a></button>
     </td>
   </tr>
 
@@ -43,6 +43,8 @@
   </tr>
   </table>
 </nav>
+
+<img src="./images/collage.png">
 
 <body>
 </html>
