Refactor of index page to have clickable images in a grid

--- a/index.html
+++ b/index.html
@@ -44,7 +44,25 @@
   </table>
 </nav>
 
-<img src="./images/collage.png">
+<article class="grid-container">
+  <img class="portrait" src="./images/portrait.png">
+  <a class="Thesis2010" href="./thesis.html">
+    <figure>
+      <img src="./images/Thesis2010.png">
+      <figcaption>
+        My 2010 Point-Rendering thesis.
+      </figcaption>
+    </figure>
+    </a>
+  <a class="AIMagazine" href="./robotics.html#AIMagazine">
+    <figure>
+      <img src="./images/AI_Magazine.png">
+      <figcaption>
+        See my publications about<BR> AAAI Robotics Contest winners.
+      </figcaption>
+    </figure>
+    </a>
+</article>
 
 <body>
 </html>
