--- a/robotics.html
+++ b/robotics.html
@@ -139,7 +139,7 @@
    <center>
    <table cellspacing=10 cellpadding=15>
 	<tr>
-          <td align="left" valign="top">
+          <td align="left" valign="top" id="AIMagazine">
            <img src="./images/AI_2003_text.jpg"></td>
            
           <td align="left" valign="top">
