Changed caption of AIMagazine figure

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <figure>
       <img src="./images/AI_Magazine.png">
       <figcaption>
-        See my publications about<BR> AAAI Robotics Contest winners.
+        See my publications about<BR> my two AAAI Robotics Contest<BR> winning robots.
       </figcaption>
     </figure>
     </a>
