With introduction paragraph next to the nav links

--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
 <img src="./images/line.jpg">
 <BR><BR>
 
-<nav>
+<table class="nav_and_intro">
+<tr>
+<td>
+<nav class="navclass">
   <table>
   <tr>
 	  <td>
@@ -43,6 +46,16 @@
   </tr>
   </table>
 </nav>
+</td>
+
+<td>
+<p class="introduction">
+  Hello, this is Jon.  I am a Software Developer coming from Robotics and Visualization.  I seek a role as a 
+  Full Stack Developer.
+</p>
+</td>
+</tr>
+</table>
 
 <article class="grid-container">
   <img class="portrait" src="./images/portrait.png">
