Added last name to introduction

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 <td>
 <p class="introduction">
-  Hello, this is Jon.  I am a Software Developer coming from Robotics and Visualization.  I seek a role as a 
+  Hello, this is Jon Schmid.  I am a Software Developer coming from Robotics and Visualization.  I seek a role as a 
   Full Stack Developer.
 </p>
 </td>
