Change figure caption for AI-Magazine

--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
     <figure>
       <img src="./images/AI_Magazine.png">
       <figcaption>
-        See my publications about<BR> my two AAAI Robotics Contest<BR> winning robots.
+        See my publications about my<BR>
+        AAAI Robotics Contest winning robots.
       </figcaption>
     </figure>
     </a>
