Cleanup of robotics.html page

--- a/robotics.html
+++ b/robotics.html
@@ -152,7 +152,7 @@
     	        <b>AI Magazine</b>, Vol 24, No 1 <BR>
               The AAAI-2002 Mobile Robot Competition and Exhibition. <BR>
 							Holly A. Yanco, Tucker Balch (PDF).<BR>
-							Click On: 'Full Text: PDF' link. </a> <BR><BR>
+							Click On: 'PDF' link. </a> <BR><BR>
 
            <a href="./PDFs/Mabel AAAI 2002.pdf">
               Schmid J, Brown C M, et al.<BR>
@@ -160,7 +160,7 @@
 	  </td>
 
 	  <td>
-  	    Role: <a href="http://www.csug.rochester.edu/ug.research/robot.team.html">Organizer</a>, Vision Team Leader
+  	    Role: Organizer, Vision Team Leader
 	  </td>
 	</tr>
  	<BR>
