Added React movie search page.

--- a/fullstack.html
+++ b/fullstack.html
@@ -24,14 +24,16 @@
   <p><a href="./index.html">Back to Index</a></p>
   <BR>
 
-  <h2>Recent ASP.NET <a href="http://jonathan-schmid.redirectme.net:5283">Full Stack Developer work</a> with RazorPages, 
+  <h2>My <a href="http://jonathan-schmid.redirectme.net:5174">React page</a> that uses the IMDB API to search and display movies.</h2><br />
+
+  <h2>ASP.NET <a href="http://jonathan-schmid.redirectme.net:5283">Full Stack Developer work</a> with RazorPages, 
       Javascript, SQL, and an SQLite database</h2>
 
   <p>Source can be found at the <a href="https://github.com/jschmidGitHub/TestRazorApp">git hub URL: 
       https://github.com/jschmidGitHub/TestRazorApp</a></p>
   
   <p>This site allows selection of a Customer and one of that customer's Products.  It displays the Product Detail 
-    in a dynamic page.  Buttons allow for CRUD operations and addition of new customers and products.
+    in a dynamic page.  Buttons allow for CRUD operations and addition/deletion of customers.
   </p>
   
 
