With Passing Thoughts React page link

--- a/fullstack.html
+++ b/fullstack.html
@@ -24,7 +24,9 @@
   <p><a href="./index.html">Back to Index</a></p>
   <BR>
 
-  <h2>My <a href="http://jonathan-schmid.redirectme.net:5174">React page</a> that uses the IMDB API to search and display movies.</h2><br />
+  <h2>A fun little React page called: <a href="http://jonathan-schmid.redirectme.net:5173">Passing Thoughts</a>, that I adapted from the CodeCademy full stack developer tutorials.</h2><br />
+
+  <h2>My <a href="http://jonathan-schmid.redirectme.net:5174">Movie-Search React page</a> that uses the IMDB API to search and display movie posters and summaries.</h2><br />
 
   <h2>ASP.NET <a href="http://jonathan-schmid.redirectme.net:5283">Full Stack Developer work</a> with RazorPages, 
       Javascript, SQL, and an SQLite database</h2>
